--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,8 +9,9 @@
         android:background="@color/main_green">
 
         <ImageButton
-            android:padding="10dp"
-            android:layout_margin="10dp"
+            android:visibility="invisible"
+            android:paddingRight="20dp"
+            android:paddingBottom="20dp"
             android:id="@+id/add_button"
             android:background="@drawable/oval"
             android:layout_width="@dimen/round_button_diameter"
