--- a/app/src/main/res/layout/supadj.xml
+++ b/app/src/main/res/layout/supadj.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Being the best"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="The superlative form is when something has an attribute that is uncontested as being the best. In English, we express this with the ending -est. An item can be the 'greatest', the 'best', the 'worst', the 'most useful', and so on."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Context in Irish"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,47 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Irish, as you remember from 'comparative form', had a special form that the adjective had to change to known as the feminine genitive singular form. The good news is that to express this form in Irish, keep the exact same form except replace 'níos' with 'is'."/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="This means that all that must be learned here is that the word 'is' replaces 'níos'. The constructs remain virtually the same."/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Examples"/>
+
+        <TextView
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Is é Béarla an teanga is mó labhartha in Éirinn an lae inniu\nEnglish is the most spoken in Ireland today\n\nIs é sin an rud is fearr ar domhain\nThis is the best thing in the world\n\nTá an teicneolaíocht is fearr ag an tSeapáin ar domhain\nJapan has the best technology in the world"/>
 
         <View
             android:layout_width="fill_parent"
