--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -19,7 +19,8 @@
             android:background="@color/lightestgrey"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginTop="0dp"/>
+            android:layout_marginTop="0dp">
+        </FrameLayout>
 
 
         <!-- The navigation menu -->
