--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/main_green">
+        android:background="@color/main_yellow">
 
         <ImageButton
             android:visibility="invisible"
@@ -39,7 +39,7 @@
             android:maxWidth="200dp"
             android:maxHeight="200dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/gaeilge"
+            android:src="@drawable/c_ireland"
             android:layout_marginTop="15dp"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true" />
@@ -60,7 +60,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Welcome to Irish Grammar - the all encompassing guide to Irish Gaelic. Swipe left from the edge to view the topics in this app, and swipe right from the edge for a cheat-sheet of all main grammar points"
+            android:text="Welcome to Understand Irish - the all encompassing guide to Irish Gaelic. Swipe from the left or right edge to see menus for navigation."
             android:id="@+id/maindesc"
             android:gravity="center"
             android:paddingLeft="10dp"
@@ -69,20 +69,6 @@
             android:layout_below="@+id/logotext"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
-
-        <ImageView
-            android:id="@+id/image_view_swipe"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:maxWidth="100dp"
-            android:maxHeight="100dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/swipe_arrow"
-            android:layout_below="@+id/maindesc"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -93,9 +79,10 @@
             android:gravity="center"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:layout_below="@+id/image_view_swipe"
+            android:layout_below="@+id/maindesc"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp" />
 
         <Button
